--- a/assets/src/css/btc-paywall-public.css
+++ b/assets/src/css/btc-paywall-public.css
@@ -1179,8 +1179,7 @@ div.btcpw_page_header_container > div:nth-child(2) {
 Revenue types
 */
 .btcpw_revenue_post_container,
-.btcpw_revenue_view_container,
-.btcpw_revenue_file_container {
+.btcpw_revenue_view_container {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #ecf0f1;
@@ -1201,8 +1200,7 @@ Revenue types
   margin-bottom: 15px;
 }
 .btcpw_revenue_post_container form,
-.btcpw_revenue_view_container form,
-.btcpw_revenue_file_container form {
+.btcpw_revenue_view_container form {
   height: 100%;
   width: 100%;
 }
@@ -1247,18 +1245,7 @@ Revenue types
   display: flex;
   flex-direction: column;
 }
-/* .btcpw_revenue_post_customer_name_wrap,
-.btcpw_revenue_post_customer_email_wrap,
-.btcpw_revenue_post_customer_address_wrap,
-.btcpw_revenue_post_customer_phone_wrap,
-.btcpw_revenue_post_customer_message_wrap,
-.btcpw_revenue_view_customer_name_wrap,
-.btcpw_revenue_view_customer_email_wrap,
-.btcpw_revenue_view_customer_address_wrap,
-.btcpw_revenue_view_customer_phone_wrap,
-.btcpw_revenue_view_customer_message_wrap {
-  width: 90%;
-} */
+
 #btcpw_revenue_post_button_second_step,
 #btcpw_revenue_view_button_second_step {
   height: 65px;
@@ -1281,8 +1268,7 @@ Revenue types
   width: 50%;
 }
 #btcpw_revenue_post_button,
-#btcpw_revenue_view_button,
-#btcpw_revenue_file_button {
+#btcpw_revenue_view_button {
   height: 65px;
 }
 #btcpw_revenue_post_button_second_step > div,
@@ -1296,11 +1282,6 @@ Revenue types
   margin: 0 auto !important;
 }
 
-/* #btcpw_revenue_post_button > div:nth-child(1) > input,
-#btcpw_revenue_view_button > div:nth-child(1) > input,
-#btcpw_revenue_file_button > div:nth-child(1) > input {
-  color: white;
-} */
 #btcpw_revenue_post_button_second_step > button[type='submit'],
 #btcpw_revenue_post_button_second_step > input.revenue-post-next-form,
 #btcpw_revenue_post_button > button[type='submit'],
@@ -1345,15 +1326,15 @@ Pay-per-file
   display: flex;
   flex-direction: column;
 }
-#btcpw_digital_download_button {
-  margin-top: 50px;
-}
+
 .btcpw_digital_download {
   position: absolute;
   bottom: 0;
   left: 0;
 }
-
+.btcpw_digital_download_button {
+  margin: 4em;
+}
 .btcpw_digital_download_customer_information input[type='text'],
 .btcpw_digital_download_customer_information input[type='email'],
 .btcpw_digital_download_customer_information input[type='number'],
@@ -1477,4 +1458,8 @@ button.btcpaywall_add_to_cart {
 .btcpw_revenue_view_customer_information input[type='tel'],
 .btcpw_revenue_view_customer_information textarea {
   border-radius: 8px;
+}
+
+#btcpw_digital_download_customer_info h2 {
+  text-align: center;
 }
