Improve confirmation page

--- a/assets/src/css/btc-paywall-public.css
+++ b/assets/src/css/btc-paywall-public.css
@@ -1489,3 +1489,7 @@ button.btcpaywall_add_to_cart:hover {
 .btcpw_digital_download_customer_information input {
   width: 100%;
 }
+
+.btcpaywall-table th {
+  text-align: center;
+}
