--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -7,7 +7,6 @@
 input[type='text']:not(.btcpw_add_form_preview),
 select:not(.btcpw_add_form_preview),
 textarea:not(.btcpw_add_form_preview) {
-  width: 50%;
   padding: 6px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -558,4 +557,33 @@ Settings Tabs
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   -khtml-border-radius: 15px;
+}
+
+/*Payment view labels*/
+.btcpaywall_payment_container label {
+  display: inline-block;
+  width: 70px;
+}
+
+.btcpaywall_payment_container_type table,
+.btcpaywall_payment_container_customer_details table {
+  table-layout: fixed !important;
+  width: 100% !important;
+  border-collapse: collapse;
+  border: 2px solid rgb(0, 0, 0);
+}
+
+.btcpaywall_payment_container_customer_details td,
+.btcpaywall_payment_container_type td {
+  padding: 15px;
+  text-align: center;
+  letter-spacing: 1px;
+  border: thin solid rgb(0, 0, 0);
+  vertical-align: top;
+  border-spacing: 0;
+}
+
+.btcpaywall_payment_container_customer_message textarea {
+  width: 100%;
+  min-height: 100px;
 }
