--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -4,7 +4,7 @@
   display: none;
 }
 
-input[type='text']:not(.btcpw_add_form_preview),
+input[type="text"]:not(.btcpw_add_form_preview),
 select:not(.btcpw_add_form_preview),
 textarea:not(.btcpw_add_form_preview) {
   padding: 6px;
@@ -32,7 +32,7 @@ textarea:not(.btcpw_add_form_preview) {
   flex: 0.4;
 }
 
-.section > h1 {
+/* .section > h1 {
   font-size: 35px;
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -90,7 +90,7 @@ td.New {
 }
 td.Settled {
   background-color: #269950;
-}
+} */
 .btcpw_pay__gutenberg_block_separator {
   width: 100%;
   height: 25px;
@@ -113,7 +113,7 @@ td.Settled {
   font-weight: bold;
 }
 
-.container_predefined_amount input:not([type='checkbox']),
+.container_predefined_amount input:not([type="checkbox"]),
 .container_predefined_amount select {
   width: 100px;
 }
@@ -161,16 +161,16 @@ td.Settled {
   width: auto;
   height: 100px;
 }
-.tipping_box textarea,
+/* .tipping_box textarea,
 .tipping_banner textarea {
   width: auto;
   height: 80px;
 }
 .tipping_box label,
-.tipping_banner textarea {
+.tipping_banner label {
   display: inline-block;
   vertical-align: middle;
-}
+} */
 .tipping_box input.widget-tipping-basic_redirect,
 .tipping_banner input.widget-tipping-basic_redirect {
   width: 100%;
@@ -188,8 +188,8 @@ td.Settled {
 }
 .btcpw_add_form_notice p,
 .btcpw_form_notice p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 15px;
   letter-spacing: 0.1em;
   line-height: 1.75;
@@ -530,7 +530,7 @@ Settings Tabs
 }
 
 .btcpw_digital_download_limit_help:before {
-  content: '\003F';
+  content: "\003F";
   font-weight: bolder;
 }
 
@@ -547,7 +547,7 @@ Settings Tabs
 }
 
 .btcpw_download_limit_helper:after {
-  content: '\003F';
+  content: "\003F";
 }
 
 .btcpw_pay_preview {
